--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,36 @@
 .btn-section{
     padding: 14px;
 }
+.navbar{
+    background-color: #86DDB8;
+}
+/*Home page two design start*/
+.navbar .bg-base-100{
+    display: flex;
+    flex-wrap: wrap;
+}
 .logo-img{
     width: 70px;
 }
+.ii:hover{
+    letter-spacing: 1.5px;
+    color: rgb(240, 255, 247);
+    background: #17b978;
+    transition: 0.4s;
+    border-bottom: 1px solid gray;
+}
+.section{
+    width: 100%;
+    height: 90vh;
+    background-size: cover;
+    background-color: #071a52;
+    background-image: url('background.jpg');
+}
+.iii:hover{
+    letter-spacing: 3px;
+    transition: 0.4s;
+}
+/*Home page two design end*/
 .nav-btn{
     padding: 10px;
     border-radius: 10px;
