--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@
     border-bottom: 1px solid gray;
 }
 .section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: start;
     width: 100%;
     height: 90vh;
     background-size: cover;
@@ -44,6 +48,31 @@
 .iii:hover{
     letter-spacing: 3px;
     transition: 0.4s;
+}
+.booking-form{
+    display: flex;
+    width: 50%;
+    height: 40vh;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+.form_part_one{
+    padding: 20px;
+}
+.search-train{
+width: 47%;
+margin-left: 40px;
+margin-bottom: 20px;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.btn-block{
+    color: rgb(43, 37, 37);
+}
+.btn-block:hover{
+    color: white;
 }
 /*Home page two design end*/
 .nav-btn{
